welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a>b) {if ((a-b)>=10) {return true}} 
            ^lessBy10:3: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (b>a) {if ((b-a)>=10) {return true}}
                 ^lessBy10:4: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (a>c) {if ((a-c)>=10) {return true}}
                       ^lessBy10:5: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (c>a) {if ((c-a)>=10) {return true}}
                       ^lessBy10:6: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (b>c) {if ((b-c)>=10) {return true}}
                       ^lessBy10:7: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (c>b) {if ((c-b)>=10) {return true}}
                       ^